# ContractAI

./: .gitignore  pyproject.toml
demo/: ContractAISystem.py  WorkingContractAI.py  web_interface.py
reports/: contract_analysis_20251116_201614.json  contract_analysis_20251116_201614.txt  contract_analysis_20251116_204316.json  contract_analysis_20251116_204316.txt
uploads/: test_contract.docx
